--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Most Starred Repos</title>
   </head>
   <body data-mode="dark" class="dark:bg-gray-900 dark:text-white transition-colors">
     <div id="app"></div>
